Renamed project from project-time-calculator to project-time-tracker

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-time-calculator",
+  "name": "project-time-tracker",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
